<resources>
  <string name="app_name" translatable="false">Stock Hawk</string>

  <string name="action_example">Example action</string>

  <string name="action_about">About</string>
  <string name="action_change_units">Change Units</string>
  <string name="symbol_search">Symbol Search</string>
  <string name="content_test">Search for a Stock Symbol</string>
  <string name="input_hint">FB</string>
  <string name="input_prefill"></string>
  <string name="string_symbol">symbol</string>
  <string name="name">name</string>
  <string name="price">price</string>
  <string name="change">change</string>
  <string name="perc">perc</string>
  <string name="range">range</string>

  <string name="no_stocks">No stocks to show</string>
  <string name="stock_saved">This stock is already saved!</string>
  <string name="batch_error">Error applying batch insert</string>
  <string name="dialog_content">A stock monitoring app that shows stock change over time.</string>

  <string name="details">Stock Details</string>
  <string name="details_symbol">symbol:</string>
  <string name="details_bid">bid price:</string>
  <string name="details_currency">currency:</string>
  <string name="details_change_percent">change(%):</string>
  <string name="details_change_amount">change(USD):</string>
  <string name="details_highest">highest bid:</string>
  <string name="details_lowest">lowest bid:</string>

  <string name="desc_recycler_view">Stock item</string>
  <string name="desc_fab_main">Add more stocks</string>
  <string name="desc_chart">Line chart of data over given range</string>
  <string name="desc_showRange">Stock range</string>
  <string name="desc_arcMenu">Select range</string>
  <string name="desc_fab1">One month</string>
  <string name="desc_fab2">Six months</string>
  <string name="desc_fab3">One year</string>
  <string name="desc_details_card">Stock details</string>
  <string name="desc_widget_symbol">Stock item name</string>
  <string name="desc_widget_bid">Bid Price</string>
  <string name="desc_widget_change">Change in price</string>
  <string name="desc_refresh">Refresh values</string>
  <string name="desc_no_stocks">No stocks to show</string>

  <string name="graph_range_detail">Displaying stock data over range:</string>
  <string name="symbol_error">Stock symbol not found!</string>
  <string name="network_toast">Uh-oh! This app requires an internet connection</string>
  <string name="placeholder_desc">Oops, something went out of order!</string>
  <string name="widget_placeholder">NO STOCKS TO SHOW</string>

  <string name="one_month">&#160;1m&#160;</string>
  <string name="six_months">&#160;6m&#160;</string>
  <string name="one_year">&#160;1y&#160;</string>
</resources>
