<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_item_stock_quote"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">
    <TextView
        android:id="@+id/stock_symbol"
        android:textSize="20sp"
        android:layout_weight="1"
        android:contentDescription="@string/desc_widget_symbol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        tools:text="GOOG"
        />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        >
        <TextView
            android:id="@+id/bid_price"
            style="@style/BidPriceTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1000.00"
            android:contentDescription="@string/desc_widget_bid"
            android:paddingRight="@dimen/widget_margin"
            android:paddingLeft="@dimen/widget_margin"
            android:paddingEnd="@dimen/widget_margin"
            android:paddingStart="@dimen/widget_margin"
            />
        <TextView
            android:id="@+id/change"
            android:background="@drawable/percent_change_pill"
            style="@style/PercentChangeTextStyle"
            android:contentDescription="@string/desc_widget_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="100%"
            />
    </LinearLayout>
</LinearLayout>